# Patrick

./: .gitignore  Dockerfile  README.md  dependencies.txt  docker-compose.yaml  entrypoint.sh
src/patrick_coordination/: CMakeLists.txt  package.xml
src/patrick_main/: CMakeLists.txt  package.xml
src/patrick_main/config/: patrick_controllers.yaml  patrick_params.yaml
src/patrick_main/launch/: patrick_bringup.launch.py  view_robot.launch.py
src/patrick_main/meshes/arm/: Link1.stl  Link2.stl  Link3.stl  Link4.stl  Link5.stl  Link6L.stl  Link6R.stl
src/patrick_main/rviz/: robot.rviz
src/patrick_main/urdf/: patrick.urdf.xacro  patrick.urdf.xacro.bak  patrick_arm.urdf.xacro  patrick_stack.urdf.xacro
src/patrick_manipulation/: CMakeLists.txt  package.xml  patrick_manipulation_plugin.xml
src/patrick_manipulation/include/patrick_manipulation/: arduino_hardware_interface.hpp  operations.hpp  states.hpp
src/patrick_manipulation/launch/: manipulation.launch.py
src/patrick_manipulation/src/: arduino_hardware_interface.cpp  dynamixel_driver_node.cpp.bak  functionality_check.cpp  manipulation_node.cpp
src/patrick_moveit_config/: CMakeLists.txt  package.xml
src/patrick_moveit_config/config/: chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_hw.yaml  ompl_planning.yaml  patrick.srdf  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  stomp_planning.yaml
src/patrick_moveit_config/launch/: demo.launch.py  patrick_moveit.launch.py
src/patrick_msgs/: CMakeLists.txt  package.xml
src/patrick_msgs/action/: ManipulationGoal.action
src/patrick_msgs/msg/: BumperEvent.msg  CliffEvent.msg  DetectedObject.msg  DetectedObjectArray.msg  Led.msg  MotorPower.msg  WheelDropEvent.msg
src/patrick_msgs/srv/: GetLinkPose.srv  SetLinkPose.srv
src/patrick_navigation/: CMakeLists.txt  package.xml
src/patrick_navigation/include/patrick_navigation/: kobuki_operations.hpp  kobuki_protocol.hpp
src/patrick_navigation/launch/: navigation.launch.py
src/patrick_navigation/src/: kobuki_driver_node.cpp.bak  nav_functionality_check.cpp  navigation_node.cpp
src/patrick_simulation/: CMakeLists.txt  package.xml
src/patrick_simulation/launch/: gazebo.launch.py
src/patrick_simulation/worlds/: environment.sdf  hello.world  vision_test.sdf
src/patrick_vision/: CMakeLists.txt  package.xml
src/patrick_vision/launch/: vision.launch.py
src/patrick_vision/scripts/: fastsam_color_detector.py
src/patrick_vision/segmentation/: segment_generation.py
src/patrick_vision/src/: object_frame_publisher.cpp  object_marker_publisher.cpp
