<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patrick_vision</name>
  <version>0.1.0</version>
  <description>FastSAM color detection (Python) and 3D object frame publisher (C++) for Patrick (ROS 2)</description>
  <maintainer email="ayca@todo.todo">ayca</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>patrick_msgs</depend>

  <build_depend>libpcl-all-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
